--- a/LeTeam/package.json
+++ b/LeTeam/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
+    "@react-native-firebase/app": "^21.4.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -46,6 +47,8 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "metro": "^0.81.0",
+    "metro-config": "^0.81.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
